comments for each section added, title alignment problem fixed

--- a/reports/M1/style.css
+++ b/reports/M1/style.css
@@ -5,18 +5,19 @@
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
 }
+/* Style the background */
 body{
   margin: 10;
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
   min-height: 100vh;
   background: #7ec8ce;
 }
+
 /* Style the title */
-/* TODO : make title moves relative to drag area when zoom in*/
 .title { 
-  /* background-image: url("waterColour.jpg"); */
   color: white;
   font-size: 40px;
   text-align: center;
@@ -28,6 +29,8 @@ body{
   justify-content: center;
   flex-direction: column;
 }
+
+/* Style the drag and drop area */
 .drag-area{
   border: 2px dashed #fff;
   height: 500px;
@@ -73,6 +76,8 @@ body{
   object-fit: cover;
   border-radius: 5px;
 }
+
+/* Style the convert area */
 .convert-area{
   height: 100px;
   width: 700px;
@@ -92,8 +97,4 @@ body{
   color: white;
   border-radius: 5px;
   cursor: pointer;
-}
-.flex-container{
-  display: flex;
-  flex-direction: column;
 }
